<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="author_text">Netology. University of Internet Professions of the Future</string>
    <string name="published_text">May 21 at 18:36</string>
    <string name="content_text">Hi, this is the new Netology! Netology once started with intensive courses in online marketing. Then courses appeared in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has a force that makes them want more, aim higher, run faster. Our mission is to help get on the path to growth and start a chain of changes → http://netolo.gy/fyb</string>
    <string name="like" translatable="false">like</string>
    <string name="like_count" translatable="false">999</string>
    <string name="share_count" translatable="false">35</string>
    <string name="view_count" translatable="false">2032</string>
    <string name="like_description" translatable="false">Like</string>
    <string name="sher_description" translatable="false">Shere</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_save">Seve</string>
    <string name="em" translatable="false">error_empty_content</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_cancellation" translatable="false">Cancellation</string>
    <string name="description_fab_add_new_post" translatable="false">description_fab_add_new_post</string>
    <string name="shere" translatable="false">shere</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="hint_new_post">hint_new_post</string>
</resources>